fix: remove dependency on pyroscope-oss git branch (#2143)
* fix: remove dependency on pyroscope-oss git branch

also, fix repository entry in package.json

* fix: update versions of node (lts) and oauth2-mock-server

* fix: update dependencies

* fix: type issue

* fix: manually add css-loader dependency

* fix: manually add sass-loader dependency

* fix: type checks

* fix: aliases and workspaces

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,10 @@
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "paths": {
       "@phlare/*": ["./public/app/*"],
-
-      "@pyroscope/webapp/*": ["./node_modules/pyroscope-oss/webapp/*"],
-      "@webapp/redux/*": [
-        "./node_modules/pyroscope-oss/webapp/javascript/redux/*"
-      ],
-      "@pyroscope/flamegraph/*": [
-        "./node_modules/pyroscope-oss/packages/pyroscope-flamegraph/*"
-      ],
-      "@pyroscope/models/*": [
-        "./node_modules/pyroscope-oss/packages/pyroscope-models/*"
-      ],
-
+      "@pyroscope/webapp/*": ["./og/webapp/*"],
+      "@webapp/redux/*": ["./og/webapp/javascript/redux/*"],
+      "@pyroscope/flamegraph/*": ["./og/packages/pyroscope-flamegraph/*"],
+      "@pyroscope/models/*": ["./og/packages/pyroscope-models/*"],
       "@webapp/components/ExportData": [
         "./public/app/overrides/components/ExportData"
       ],
@@ -43,7 +35,7 @@
       "@webapp/services/render": ["./public/app/overrides/services/render"],
       "@webapp/services/tags": ["./public/app/overrides/services/tags"],
       "@webapp/services/base": ["./public/app/overrides/services/base"],
-      "@webapp/*": ["./node_modules/pyroscope-oss/webapp/javascript/*"],
+      "@webapp/*": ["./og/webapp/javascript/*"],
       "@mui/base/*": ["./node_modules/@mui/base/*"],
       "zod": ["./node_modules/zod"]
     },
@@ -70,6 +62,6 @@
     "./node_modules/pyroscope-oss/lib/",
     "./node_modules/pyroscope-oss/webapp/javascript/types",
     "public",
-    "public/app/types.ts"
+    "public/app/types.d.ts"
   ]
 }
