--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grafana-pyroscope",
   "version": "0.0.1",
-  "repository": "git@github.com:grafana/phlare.git",
+  "repository": "git@github.com:grafana/pyroscope.git",
   "author": "Grafana Labs",
   "license": "AGPL-3.0-only",
   "private": true,
@@ -80,10 +80,11 @@
     "@szhsin/react-menu": "3.5.2",
     "@types/file-saver": "^2.0.5",
     "compression-streams-polyfill": "^0.1.4",
+    "css-loader": "^4.0.0",
     "file-saver": "^2.0.5",
     "graphviz-react": "^1.2.5",
     "jquery": "^3.6.4",
-    "pyroscope-oss": "git+https://github.com/pyroscope-io/pyroscope.git#f710852",
+    "protobufjs": "^7.2.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.7.0",
     "react-debounce-input": "^3.2.5",
@@ -97,6 +98,10 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "5.3.0",
     "react-textarea-autosize": "8.3.0",
+    "sass-loader": "^9.0.2",
     "zod": "^3.21.4"
-  }
+  },
+  "workspaces": [
+    "og"
+  ]
 }
