--- a/.github/workflows/publish-technical-documentation-next.yml
+++ b/.github/workflows/publish-technical-documentation-next.yml
@@ -37,7 +37,7 @@ jobs:
       id: "publish-next"
       with:
         repository: "grafana/website"
-        branch: "master"
+        branch: "publish-to-pyroscope"
         host: "github.com"
         # PUBLISH_TO_WEBSITE_TOKEN is a fine-grained GitHub Personal Access Token that expires.
         # It must be regenerated in the grafanabot GitHub account and requires a Grafana organization
@@ -45,4 +45,4 @@ jobs:
         # The IT helpdesk can update the organization secret.
         github_pat: "grafanabot:${{ secrets.PUBLISH_TO_WEBSITE_TOKEN }}"
         source_folder: "docs/sources"
-        target_folder: "content/docs/phlare/next"
+        target_folder: "content/docs/pyroscope/next"
