--- a/.github/workflows/weekly-release.yml
+++ b/.github/workflows/weekly-release.yml
@@ -45,7 +45,7 @@ jobs:
       - run: make frontend/build
       - name: Get github app token (valid for an hour)
         id: app-goreleaser
-        uses: getsentry/action-github-app-token@v2
+        uses: tibdex/github-app-token@v1
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.APP_PRIVATE_KEY }}
@@ -78,7 +78,7 @@ jobs:
           docker manifest push "grafana/pyroscope:${WEEKLY_IMAGE_TAG}"
       - name: Get github app token (valid for an hour)
         id: app-git-tag
-        uses: getsentry/action-github-app-token@v2
+        uses: tibdex/github-app-token@v1
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.APP_PRIVATE_KEY }}
