--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@fortawesome/fontawesome-common-types": "~0.2.36",
-    "@size-limit/file": "^6.0.3",
-    "@size-limit/time": "^6.0.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-common-types": "~0.2.36",
     "@grafana/eslint-config": "^5.1.0",
+    "@size-limit/file": "^6.0.3",
+    "@size-limit/time": "^6.0.3",
     "@storybook/addon-actions": "~6.5.0",
     "@storybook/addon-essentials": "~6.5.0",
     "@storybook/addon-links": "~6.5.0",
@@ -35,7 +35,8 @@
     "@swc/core": "^1.3.55",
     "@swc/jest": "^0.2.26",
     "@testing-library/cypress": "^9.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.2.1",
@@ -45,10 +46,12 @@
     "@types/flot": "^0.0.32",
     "@types/history": "4.7.11",
     "@types/jest": "^29.5.0",
+    "@types/jest-image-snapshot": "^4.3.1",
     "@types/jquery": "^3.5.13",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.map": "^4.6.13",
+    "@types/mocha": "^10.0.1",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.0",
     "@types/react-copy-to-clipboard": "^5.0.2",
@@ -58,12 +61,13 @@
     "@types/react-notifications-component": "~3.1.0",
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/react-router-dom": "5.3.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
-    "copy-webpack-plugin": "^11.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "contributor-faces": "^1.1.0",
     "conventional-changelog-cli": "^2.1.1",
+    "copy-webpack-plugin": "^11.0.0",
     "cypress": "^12.11.0",
     "cypress-image-snapshot": "^4.0.1",
     "d3-scale": "^4.0.2",
@@ -111,11 +115,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@fortawesome/react-fontawesome": "~0.1.11",
     "@fortawesome/fontawesome-svg-core": "~1.2.30",
     "@fortawesome/free-brands-svg-icons": "~5.15.1",
-    "@fortawesome/free-solid-svg-icons": "~5.14.0",
     "@fortawesome/free-regular-svg-icons": "~5.15.2",
+    "@fortawesome/free-solid-svg-icons": "~5.14.0",
+    "@fortawesome/react-fontawesome": "~0.1.11",
     "@hookform/resolvers": "^2.9.8",
     "@mui/base": "5.0.0-alpha.98",
     "@mui/material": "5.10.11",
@@ -131,6 +135,7 @@
     "file-saver": "^2.0.5",
     "graphviz-react": "^1.2.5",
     "jquery": "^3.6.4",
+    "jquery.flot.tooltip": "^0.9.0",
     "lodash.groupby": "^4.6.0",
     "lodash.map": "^4.6.0",
     "prismjs": "^1.27.0",
@@ -159,6 +164,7 @@
     "sweetalert2-react-content": "^4.2.0",
     "true-myth": "~5.2.0",
     "ts-custom-error": "^3.2.0",
+    "ts-essentials": "^9.0.0",
     "zod": "^3.21.4"
   }
 }
