--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "expose-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
+    "jest-canvas-mock": "^2.3.1",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.5",
@@ -162,9 +163,13 @@
     "sass-loader": "^9.0.2",
     "sweetalert2": "^11.4.0, <11.4.9",
     "sweetalert2-react-content": "^4.2.0",
+    "timezone-mock": "^1.3.0",
     "true-myth": "~5.2.0",
     "ts-custom-error": "^3.2.0",
     "ts-essentials": "^9.0.0",
     "zod": "^3.21.4"
+  },
+  "optionalDependencies": {
+    "@pyroscope/nodejs": "^0.2.5"
   }
 }
