fix: lint, and format

--- a/.eslintignore
+++ b/.eslintignore
@@ -12,4 +12,8 @@ examples/**
 public/app/util/**
 public/app/stories/**
 **.spec.ts*
-
+svg-transform.js
+setupAfterEnv.ts
+globalSetup.js
+globalTeardown.js
+jest-css-modules-transform-config.js
