--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@storybook/builder-webpack5": "~6.5.0",
     "@storybook/manager-webpack5": "~6.5.0",
     "@storybook/react": "~6.5.0",
-    "@swc/core": "^1.3.55",
-    "@swc/jest": "^0.2.26",
+    "@swc/core": "^1.3.74",
+    "@swc/jest": "^0.2.27",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -95,6 +95,7 @@
     "jest-canvas-mock": "^2.3.1",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.7.5",
     "msw": "^0.36.3",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
