--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^4.5.2",
     "typescript-plugin-css-modules": "^3.4.0",
+    "web-streams-polyfill": "^3.2.1",
     "webpack": "^5.77.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^5.0.1",
