Switch to master branch of the website

--- a/.github/workflows/publish-technical-documentation-next.yml
+++ b/.github/workflows/publish-technical-documentation-next.yml
@@ -37,7 +37,7 @@ jobs:
       id: "publish-next"
       with:
         repository: "grafana/website"
-        branch: "publish-to-pyroscope"
+        branch: "master"
         host: "github.com"
         # PUBLISH_TO_WEBSITE_TOKEN is a fine-grained GitHub Personal Access Token that expires.
         # It must be regenerated in the grafanabot GitHub account and requires a Grafana organization
