fix(docs): switch ebpf example to use grafana/pyroscope and grafana/agent

--- a/examples/ebpf/docker-compose.yml
+++ b/examples/ebpf/docker-compose.yml
@@ -2,23 +2,22 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'grafana/pyroscope:weekly-f26-8e3be8fa'
     ports:
-      - '4040:4040'
-    command:
-      - 'server'
+      - '4100:4100'
   app:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'docker.io/grafana/agent:v0.35.2'
     user: root
     privileged: true
     pid: 'host'
+    environment:
+      - AGENT_MODE=flow
     volumes:
-      - /lib/modules:/lib/modules
+      - ./config.river:/config.river
+    ports:
+      - '12345:12345'
     command:
-      - 'connect'
-      - '--spy-name'
-      - 'ebpfspy'
-      - '--pid'
-      - '-1'
-      - '--server-address'
-      - 'http://pyroscope:4040'
+      - 'run'
+      - '/config.river'
+      - '--storage.path=/tmp/agent'
+      - '--server.http.listen-addr=0.0.0.0:12345'
