--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -11,8 +11,8 @@ jobs:
   call-update-helm-repo:
     uses: grafana/helm-charts/.github/workflows/update-helm-repo.yaml@main
     with:
-      charts_dir: operations/phlare/helm/
-      cr_configfile: operations/phlare/helm/cr.yaml
-      ct_configfile: operations/phlare/helm/ct.yaml
+      charts_dir: operations/pyroscope/helm/
+      cr_configfile: operations/pyroscope/helm/cr.yaml
+      ct_configfile: operations/pyroscope/helm/ct.yaml
     secrets:
       helm_repo_token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
